# ticketing

./: .gitignore  README.md  app.py  pyproject.toml  ticket.db
src/: app.py
src/ticketing/: display.py  index.html
src/ticketing/database/: __init__.py  connection.py
src/ticketing/models/: Ticket.py  User.py  __init__.py
testing/: conftest.py  test_Ticket.py  test_User.py  test_connection.py  test_display.py  test_qrcode.py
