[project]
name = "grandprix-ticketing"
description = "A ticketing system designed for the Purdue Grand Prix with hopes of transforming into something more modular and customizable"
version = "0.1"
authors = [
    { name = "Ruhaan Bhargav", email = "bharga54@purdue.edu" },
    { name = "Ryan Hubbart", email = "rhubbart@purdue.edu" },
]
readme = "README.md"
dependencies = [
    'qrcode[pil]',
    'gspread>=5.0.0',
    'google-auth>=2.0.0',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.0.0',
    'pytest-cov>=4.0.0',  # for coverage reports
]

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"